# markdown2pdf

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  build.sh  package-lock.json  package.json  vite.config.ts
docs/: DESIGN.md  ENG.md  MVP_PLAN.md
engine/: Cargo.toml
engine/src/: lib.rs
package/: engine.wasm  lib.typ  typst.toml
package/styles/: modern-tech.typ
src/: app.html  global.css
src/lib/: card-export-presets.ts
src/lib/components/: CardGallery.svelte  CardsEditor.svelte  DocumentMenu.svelte  EditorPane.svelte  MarkdownEditor.svelte  PdfEditor.svelte  SlidesEditor.svelte  StatusHint.svelte  WysiwygEditor.svelte
src/lib/mermaid/: render.ts
src/lib/pipeline/: markdownToHtml.ts  markdownToTypst.ts
src/lib/pipeline/plugins/: remark-admonitions.ts  remark-emoji-shortcodes.ts  remark-mark.ts  (+5 more)
src/lib/storage/: documents.ts
src/lib/stores/: documentStore.svelte.ts
src/lib/templates/: card-templates.ts  pdf-templates.ts  slides-templates.ts
src/lib/twemoji/: loader.ts
src/lib/typst/: admonitions.typ  renderer.ts
src/lib/utils/: image-utils.ts  remote-images.ts
src/lib/workers/: typst.worker.ts  typstClient.ts
src/routes/: +page.svelte
src/routes/cards/: +page.svelte
src/routes/slides/: +page.svelte
static/: manifest.webmanifest
tests/: documentStore.test.ts  emoji.md  extended.md  frontmatter.md  sample.md
web/: README.md  package.json  vite.config.ts  vitest.config.ts
web/src/: hooks.client.ts  pwa.d.ts
web/src/lib/: pagebreak.ts  seo.ts
web/src/routes/: +layout.svelte
web/tests/: documentStore.test.ts  setup.ts
(+21 files in other folders)
